--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <h2><a href="https://1kb4afk1sip38vc0f3tu1ub8dc8batst48el650582ust3ojdgdg.codecademy.cloud/">Download Excursion (Coming soon!)</a></h2>
+    <div class="header">
+      <p>Discover hidden places in the world around you</p>
+    </div>
+    <div class="download">
+      <p><a href="https://1kb4afk1sip38vc0f3tu1ub8dc8batst48el650582ust3ojdgdg.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
+    </div>
+      <video autoplay muted loop>
+        <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+      </video>
+    <div class="guide">
+      <p>Your personal travel guide</p>
+    </div>
+    <div class="places">
+      <p>Excursion remembers places you like, and recommnends new points of interests around you.</p>
+    </div>
+    <div>
+      <p>Coming Soon for iPhone and Android</p>
+    </div>
+    <div class="download">
+      <p><a href="https://1kb4afk1sip38vc0f3tu1ub8dc8batst48el650582ust3ojdgdg.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
+    </div>
   </body>
 </html>
