--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <p>Discover hidden places in the world around you</p>
     </div>
     <div class="download">
-      <p><a href="https://1kb4afk1sip38vc0f3tu1ub8dc8batst48el650582ust3ojdgdg.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
+      <p><a href="https://hp8rs4lsv3rgfgj972cm90ek12uf23454nj7qveqq658crucacd0.codecademy.cloud/" target="_blank">Download Excursion (Coming soon!)</a></p>
     </div>
       <video autoplay muted loop>
-        <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
       </video>
     <div class="guide">
       <p>Your personal travel guide</p>
@@ -20,11 +20,13 @@
     <div class="places">
       <p>Excursion remembers places you like, and recommnends new points of interests around you.</p>
     </div>
-    <div>
+      <p><img src="./resources/images/camp.jpg"></p>
+      <p><img src="./resources/images/phone.png"></p>
+    <div class="guide">
       <p>Coming Soon for iPhone and Android</p>
     </div>
     <div class="download">
-      <p><a href="https://1kb4afk1sip38vc0f3tu1ub8dc8batst48el650582ust3ojdgdg.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
+      <p><a href="https://hp8rs4lsv3rgfgj972cm90ek12uf23454nj7qveqq658crucacd0.codecademy.cloud/" target="_blank">Download Excursion (Coming soon!)</a></p>
     </div>
   </body>
 </html>
