Completed Excursion web page project.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <p>Discover hidden places in the world around you</p>
     </div>
     <div class="download">
-      <p><a href="https://hp8rs4lsv3rgfgj972cm90ek12uf23454nj7qveqq658crucacd0.codecademy.cloud/" target="_blank">Download Excursion (Coming soon!)</a></p>
+      <p><a href="https://s591conq8s33bso9tdkuj93v409k92lqc6he8dto5ba4m47d31ig.codecademy.cloud" target="_blank">Download Excursion (Coming soon!)</a></p>
     </div>
       <video autoplay muted loop>
         <source src="./resources/videos/excursion.mp4" type="video/mp4">
@@ -26,7 +26,10 @@
       <p>Coming Soon for iPhone and Android</p>
     </div>
     <div class="download">
-      <p><a href="https://hp8rs4lsv3rgfgj972cm90ek12uf23454nj7qveqq658crucacd0.codecademy.cloud/" target="_blank">Download Excursion (Coming soon!)</a></p>
+      <p><a href="https://s591conq8s33bso9tdkuj93v409k92lqc6he8dto5ba4m47d31ig.codecademy.cloud" target="_blank">Download Excursion (Coming soon!)</a></p>
     </div>
+    <footer>
+      <p>&copy; Excursion</p>
+    </footer>
   </body>
 </html>
